--- a/print_start_abs.cfg
+++ b/print_start_abs.cfg
@@ -7,12 +7,12 @@ gcode:
     M117 Homing...
     G28                              ; home All 
     STATUS_HEATING
-    M106 S51                         ; turn on PFC
+    M106 S51                         ; turn on PCF
     M117 Warmup Chamber to 40C...
     TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM=40    ; Wait for chamber to warm up
     CASE_LIGHT_ON                    ; turn on Caselight
     CLEAN_NOZZLE
-    M106 S0                          ; turn off PFC
+    M106 S0                          ; turn off PCF
     G90                              ; absolute positioning
     _CHECK_PROBE action=check_dock   ; check for probe is docked
     M117 Homing...
