--- a/macros.cfg
+++ b/macros.cfg
@@ -36,7 +36,7 @@ gcode:
     M117 Print is done.
     CASE_LIGHT_OFF                   ; turn off Caselight
     STATUS_READY
-    _NEVERMORE_off_1200                ; turn off Nevermore Filter 1200sec later
+    _NEVERMORE_off_1200              ; turn off Nevermore Filter 1200sec later
 
 
 [gcode_macro NEVERMORE_off]
@@ -421,9 +421,9 @@ gcode:
   SET_HEATER_TEMPERATURE HEATER=extruder TARGET=0
   SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET=40
   #SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET=0
-  M117 VORON 2.4 250 Willkommen!
+  M117 VORON 2.4 250 is ready :)
   STATUS_READY
-  RESPOND PREFIX=tgalarm MSG="VORON 2.4 250 sagt: Hallo! "
+  RESPOND PREFIX=tgalarm MSG="VORON 2.4 250 sagt: Hallo :) "
 
 
 [delayed_gcode _DELAYED_TURN_OFF_HEATERS]
