--- a/macros.cfg
+++ b/macros.cfg
@@ -201,7 +201,7 @@ gcode:
     G0 X125 Y125 Z100 F10000        ; Move to position
     RESTORE_GCODE_STATE NAME=PARK
   {% else %}
-    { action_respond_info("PARK disabled while printing!") }
+    { action_respond_info("PARK disabled while printing.") }
   {% endif %}
 
 # Park on the Backside
@@ -216,7 +216,7 @@ gcode:
     G0 X125 Y250 Z50 F10000        ; Move to position
     RESTORE_GCODE_STATE NAME=PARK
   {% else %}
-    { action_respond_info("PARK disabled while printing!") }
+    { action_respond_info("PARK disabled while printing.") }
   {% endif %}
 
 
@@ -231,7 +231,7 @@ gcode:
     G1 Z100 X50 Y10 F10000         ; Move to position
     RESTORE_GCODE_STATE NAME=PARKFRONT
   {% else %}
-    { action_respond_info("PARKFRONT disabled while printing!") }
+    { action_respond_info("PARKFRONT disabled while printing.") }
   {% endif %}
     STATUS_READY
   
@@ -257,7 +257,7 @@ gcode:
   G1 Z50 X125 Y118 F10000         ; Move to position
   RESTORE_GCODE_STATE NAME=PARK_XY_Tension
   {% else %}
-    { action_respond_info("PARK_XY_Tension disabled while printing!") }
+    { action_respond_info("PARK_XY_Tension disabled while printing.") }
   {% endif %}
   M117 Parked On Position to tune Belt Tension
   STATUS_READY
@@ -353,7 +353,7 @@ gcode:
     {% set TEMP = params.TEMP|default(0) %}
     {% set FORCE = params.FORCE|default(0) %}
     {% if TEMP|int < 30 %}
-        {action_respond_info("TEMP is a required parameter!")}
+        {action_respond_info("TEMP is a required parameter.")}
     {% else %}
         {% if printer.configfile.config["bed_mesh temp_" + TEMP] is not defined or FORCE|int == 1 %}
             M190 S{TEMP}           ; wait for bed temp
