--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -1,3 +1,30 @@
+[include conf.d/*.conf]
+
+[main]
+job_complete_timeout: 60
+job_error_timeout: 60
+
+[preheat ABS]
+bed: 110
+extruder: 0
+gcode: NEVERMORE_on
+
+[preheat PLA]
+bed: 70
+extruder: 0
+
+[preheat PETG]
+bed: 90
+extruder: 0
+
+[preheat TPU]
+bed: 77
+extruder: 0
+
+[preheat cooldown]
+bed: 0
+extruder: 0
+gcode: NEVERMORE_off
 
 #~# --- Do not edit below this line. This section is auto generated --- #~#
 
